RESOLVED FIXED188842
self.isSecureContext undefined in Service Worker
https://bugs.webkit.org/show_bug.cgi?id=188842
Summary self.isSecureContext undefined in Service Worker
Sam Sneddon [:gsnedders]
Reported 2018-08-22 07:05:19 PDT
Per Secure Contexts and HTML, this should be true/false.
Attachments
Patch (5.69 KB, patch)
2018-08-22 10:39 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2018-08-22 10:39:51 PDT
youenn fablet
Comment 2 2018-08-22 10:40:36 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/12628
WebKit Commit Bot
Comment 3 2018-08-23 12:44:05 PDT
Comment on attachment 347817 [details] Patch Clearing flags on attachment: 347817 Committed r235234: <https://trac.webkit.org/changeset/235234>
WebKit Commit Bot
Comment 4 2018-08-23 12:44:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-08-23 12:45:21 PDT
Note You need to log in before you can comment on or make changes to this bug.