self.isSecureContext undefined in Service Worker https://bugs.webkit.org/show_bug.cgi?id=188842

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/ServiceWorkerGlobalScope/isSecureContext.https-expected.txt: Added.
* web-platform-tests/service-workers/service-worker/ServiceWorkerGlobalScope/isSecureContext.https.html: Added.
* web-platform-tests/service-workers/service-worker/ServiceWorkerGlobalScope/isSecureContext.serviceworker.js: Added.
(test):

Source/WebKit:

Enable isSecureContext runtime flag.

* WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::WebSWContextManagerConnection::updatePreferencesStore):


Canonical link: https://commits.webkit.org/203940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235234 268f45cc-cd09-0410-ab3c-d52691b4dbfc